--- a/project/templates/flatpages/contacts.html
+++ b/project/templates/flatpages/contacts.html
@@ -1,7 +1,7 @@
 <! -- наследование шаблона default -->
 {% extends 'flatpages/default.html' %}
 
-{% block title %} TITLE 1 {% endblock title %}
+{% block title %} Contacts {% endblock title %}
 
 <! -- начало контента -->
 {% block content %}
