--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <a href="/about">About</a>
-    <a href="/contacts">Contacts</a><hr>
+    <a href="/contacts">Contacts</a>
+    <i><a href="/emails">E-mails</a></i>
+    <a href="/page1">Page 1</a><hr>
 
     {% block content %}
     {% endblock content %}
